feat(tenant): implement secure multi-tenant architecture with comprehensive validation and isolation
- Add tenant ID validation and sanitization across API routes, middleware, and utility functions
- Implement React error boundary for tenant loading failures with graceful fallbacks
- Create security-focused cache key and database URL generation with injection prevention
- Add extensive test coverage including SQL injection, XSS, and path traversal attack vectors
- Include production readiness checklist and security audit documentation
- Set up PostgreSQL database with Docker Compose and initialization script
- Add tenant-specific API routes with proper validation and error handling

--- a/package.json
+++ b/package.json
@@ -44,7 +44,13 @@
     "env:create": "node scripts/setup-env.mjs create",
     "env:all": "node scripts/setup-env.mjs all",
     "env:check": "node scripts/setup-env.mjs check",
-    "config:demo": "next dev --turbopack && open http://localhost:3000/config-demo"
+    "config:demo": "next dev --turbopack && open http://localhost:3000/config-demo",
+    "db:start": "podman-compose up -d postgres",
+    "db:stop": "podman-compose stop postgres",
+    "db:down": "podman-compose down",
+    "db:logs": "podman-compose logs -f postgres",
+    "db:restart": "podman-compose restart postgres",
+    "db:shell": "podman-compose exec postgres psql -U postgres -d nextjs_db"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
