--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   ],
   "dependencies": {
     "@clerk/nextjs": "^6.31.8",
+    "@edge-csrf/core": "2.5.3-cloudflare-rc1",
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.2.3",
@@ -109,6 +110,7 @@
     "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
+    "xss": "^1.0.15",
     "zod": "^4.1.1"
   },
   "devDependencies": {
